# boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.md  Makefile  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  health.py  items.py  login.py  logout.py  tasks.py  users.py
backend/app/commands/: create_first_superuser.py
backend/app/core/: config.py  db.py  exceptions.py  health.py  logger.py  middleware.py  schemas.py  security.py  setup.py  worker.py
backend/app/core/utils/: rate_limit.py
backend/app/crud/: __init__.py  base.py  items.py  users.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: e1c262d7e2ae_init.py
backend/app/models/: base.py  item.py  user.py
backend/app/schemas/: __init__.py  auth.py  base.py  common.py  health.py  items.py  users.py
backend/app/tasks/: __init__.py  sample_tasks.py
backend/tests/: conftest.py
backend/tests/api/routes/: test_health.py  test_items.py  test_login.py  test_logout.py  test_tasks.py  test_user_settings.py  test_users.py
backend/tests/commands/: test_create_first_superuser.py
backend/tests/core/: test_config.py  test_exceptions.py  test_health_core.py  test_logger.py  test_schemas.py  test_security.py  test_worker.py
backend/tests/core/utils/: test_rate_limit.py
backend/tests/crud/: test_crud_base.py  test_crud_users.py
backend/tests/helpers/: generators.py
backend/tests/models/: test_user.py
caddy/: Caddyfile
frontend/: Dockerfile  README.md  biome.json  openapi-ts.config.ts  package-lock.json  package.json
frontend/nginx/: index.conf
frontend/src/: main.tsx  routeTree.gen.ts  utils.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/Admin/: AddUser.tsx  DeleteUser.tsx  EditUser.tsx  UserActionsMenu.tsx  columns.tsx
frontend/src/components/Common/: Appearance.tsx  ConfirmDialog.tsx  DataTable.tsx  ErrorComponent.tsx  NotFound.tsx
frontend/src/components/Items/: AddItem.tsx  DeleteItem.tsx  EditItem.tsx  columns.tsx
frontend/src/hooks/: useAuth.ts  useCurrentUser.ts  useCustomToast.ts
frontend/src/lib/: validation.ts
frontend/src/queries/: items.ts  users.ts
frontend/src/routes/: _layout.tsx  login.tsx
frontend/tests/: auth.setup.ts  config.ts  login.spec.ts  user-settings.spec.ts
frontend/tests/utils/: privateApi.ts  random.ts  user.ts
nginx/: nginx.conf
scripts/: prestart.sh  setup.sh
(+12 files in other folders)
